<resources>
    <string name="app_name">Gallery</string>
    <string name="WelcomeText">Welcome to the Gallery</string>
    <string name="Metafora">Start Presentation</string>
    <string name="WelcomeText1">of Panagioth tetsh</string>
    <string name="KeimTesth">Ο Παναγιώτης Τέτση (1925-2016), είναι ένας Έλληνας ζωγράφος από την Ύδρα. Σπούδασε στην Ανώτατη Σχολή Καλών Τεχνών και έπειτα στη Σχολή Καλών Τεχνών στο Παρίσι (1953-1956) με υποτροφία, όπου διδάχθηκε χαλκογραφία. Ο Τέτσης είχε πλούσια καλλιτεχνική και διδακτική πορεία. Έκανε πολλές ατομικές εκθέσεις, συμμετείχε σε διεθνείς εκδηλώσεις όπως οι Μπιενάλε και δίδαξε σε διάφορα ιδρύματα, όπως η Σχολή Βακαλό και η Ανώτατη Σχολή Καλών Τεχνών, όπου διετέλεσε και πρύτανης. Το έργο του χαρακτηρίζεται από εξπρεσιονιστικά στοιχεία, με έμφαση στα χρώματα και το φως. Βραβεύτηκε το 2016 με το βραβείο Γιάννη Μόραλη και πέθανε τον Μάρτιο του ίδιου έτους, σε ηλικία 91 ετών.</string>
    <string name="xoris">Without Information</string>
    <string name="euxaristoume">Ευχαριστούμε για την επίσκεψη!</string>
    <string name="name">name</string>
    <string name="sxolio">Αφήστε μας κάποιο σχόλιο:</string>
    <string name="comments">See Comments</string>
    <string name="info">With Information</string>
    <string name="score">(0/0)</string>
    <string name="plhr">Μου άρεσε πολύ η γκαλερί θα ήθελα να ξαναέρθω!</string>
    <string name="mhnima">Ελπίζουμε να σας ξαναδούμε σύντομα</string>
    <string name="protash">Θέλετε να ξαναδείτε τις εικόνες:</string>
    <string name="score1">Το Σκορ σας ήταν:</string>
    <string name="name1">name</string>
    <string name="sif">Σίφνος I</string>
    <string name="cont">Next</string>
    <string name="back">Previous</string>
    <string name="name2">name</string>
    <string name="ath">Αθήνα IV</string>
    <string name="cont2">Next</string>
    <string name="back2">Previous</string>
    <string name="eik_pg">See Pictures</string>
    <string name="log_no">No</string>
    <string name="log_yes">Yes</string>
    <string name="textlog">Want to create an account:</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="Log">Account:</string>
    <string name="Kod">Password</string>
    <string name="user">Username</string>
    <string name="back3">Previous</string>
    <string name="Cont3">Next</string>
    <string name="info3">Pictures with more information</string>
    <string name="name3">name</string>
    <string name="quiz">Quiz</string>
    <string name="con6">Next</string>
    <string name="name6">name</string>
    <string name="score6">(0/0)</string>
    <string name="la6">Λαϊκή αγορά</string>
    <string name="sif6">Σίφνος I</string>
    <string name="mple6">Οι μπλέ καρέκλες II</string>
    <string name="erot6">Ποιά είναι η παρακάτω εικόνα:</string>
    <string name="prolog6">Αναγνωρίστε τις παρακάτω εικόνες σύμφωνα με την προηγούμενη παρουσίαση</string>
    <string name="ath6">Αθήνα IV</string>
    <string name="cont4">Next</string>
    <string name="name4">name</string>
    <string name="mple4">Οι μπλέ καρέκλες II</string>
    <string name="back5">Back</string>
    <string name="cont5">Next</string>
    <string name="name5">name</string>
    <string name="la5">Λαϊκή αγορά</string>
</resources>