<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall1"
    tools:context=".AccountPage">

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/but_shape"
        android:fontFamily="@font/agbalumo"
        android:onClick="Synd"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/but_shape"
        android:fontFamily="@font/agbalumo"
        android:onClick="Dhm"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/user_txt"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/keimeno_shape"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="text"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        android:textColorHint="#F3EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/pass_txt"
        android:layout_width="271dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/keimeno_shape"
        android:ems="10"
        android:hint="@string/Kod"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        android:textColorHint="#F3EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_txt"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/Log"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>