<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall1"
    tools:context=".OnlyImages">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/name5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/name3"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="97dp"
        android:layout_height="46dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/but_shape"
        android:fontFamily="@font/agbalumo"
        android:onClick="next_image"
        android:text="@string/Cont3"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/but_shape"
        android:fontFamily="@font/agbalumo"
        android:onClick="previous_image"
        android:text="@string/back3"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="616dp"
        android:background="@drawable/but_shape"
        android:fontFamily="@font/agbalumo"
        android:onClick="go_plhr"
        android:text="@string/info3"
        android:textAllCaps="false"
        android:textColor="#F3EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/Imagetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:textColor="#F3EFEF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="249dp"
        android:layout_height="359dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chair"
        tools:ignore="ContentDescription,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>